--- a/Lab3_NNDL.ipynb
+++ b/Lab3_NNDL.ipynb
@@ -2,6 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "38f1eb00",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Lab-3"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
    "id": "7b220c89-13af-4c60-b85c-0cfb79a23a67",
    "metadata": {},
