--- a/Lab4_NNDL.ipynb
+++ b/Lab4_NNDL.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "d7bf6d8c",
+   "metadata": {},
+   "source": [
+    "### Lab - 4"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "55b09b39-94a6-44b7-b023-1809ab9b95b2",
@@ -389,7 +397,9 @@
    "id": "1cbccbb4-1116-4f01-80d9-1d4289d6b210",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "## Lab-4 CNN"
+   ]
   }
  ],
  "metadata": {
